[gd_scene load_steps=37 format=3 uid="uid://bay5cjhpi13b1"]

[ext_resource type="Script" uid="uid://bo6jvfgfjafa8" path="res://map.gd" id="2_i0g27"]
[ext_resource type="Script" uid="uid://cp8ttl5cyac5s" path="res://sprite_3d.gd" id="2_noarx"]
[ext_resource type="Script" uid="uid://x07fpdyp3ula" path="res://camera_3d.gd" id="3_a0tk4"]
[ext_resource type="Texture2D" uid="uid://bwkuon3twx3om" path="res://test5.png" id="3_ealrb"]
[ext_resource type="Texture2D" uid="uid://bfj2c750ck3do" path="res://outlinetest2.png" id="3_i5arm"]
[ext_resource type="Shader" uid="uid://dobsawhhyrgag" path="res://black_transparent.gdshader" id="3_jka67"]
[ext_resource type="Shader" uid="uid://c2dxkamyikwk7" path="res://land.gdshader" id="4_tcnuu"]
[ext_resource type="Material" uid="uid://d4nvr5op0ya5v" path="res://Assets/Materials/land.tres" id="4_tuemg"]
[ext_resource type="Script" uid="uid://f4qad80giudw" path="res://land.gd" id="5_3v7ru"]
[ext_resource type="Texture2D" uid="uid://bn2a3apdp0b2r" path="res://test34.png" id="5_i0g27"]
[ext_resource type="Shader" uid="uid://cph51f8vu2m17" path="res://water.gdshader" id="7_wc5p8"]
[ext_resource type="Script" uid="uid://b70riu7gbpbvf" path="res://game_instance.gd" id="8_jsk3o"]
[ext_resource type="Texture2D" uid="uid://dv600tyxh1qhh" path="res://Screenshot 2025-11-15 042842.png" id="9_4arys"]
[ext_resource type="Texture2D" uid="uid://bdxv7tkkhj8yq" path="res://Assets/Icons/science.png" id="10_6iypd"]
[ext_resource type="Texture2D" uid="uid://djkn6fam336ky" path="res://Assets/Icons/culture.png" id="11_wlxy5"]
[ext_resource type="Texture2D" uid="uid://bxtex6og3mkq3" path="res://Assets/Icons/gold.png" id="12_3v7ru"]
[ext_resource type="Texture2D" uid="uid://cvno6vxc7t0wl" path="res://Assets/Icons/happiness.png" id="13_tcnuu"]
[ext_resource type="Script" uid="uid://w03ck8mg66te" path="res://savefile.gd" id="14_lggff"]
[ext_resource type="Texture2D" uid="uid://cj21y8gwic7rh" path="res://Assets/Icons/power.png" id="14_tuemg"]

[sub_resource type="BoxMesh" id="BoxMesh_jka67"]

[sub_resource type="Environment" id="Environment_wc5p8"]
background_mode = 2
background_energy_multiplier = 1.46

[sub_resource type="QuadMesh" id="QuadMesh_i5arm"]
size = Vector2(15, 15)
subdivide_width = 200
subdivide_depth = 200
orientation = 1

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wc5p8"]
noise_type = 3
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jsk3o"]
seamless = true
as_normal_map = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_wc5p8")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jsk3o"]
noise_type = 3
seed = 10
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4arys"]
seamless = true
as_normal_map = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_jsk3o")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jsk3o"]
render_priority = 0
shader = ExtResource("7_wc5p8")
shader_parameter/c = Color(0, 0.125, 0.5, 1)
shader_parameter/metallic = 0.0
shader_parameter/roughness = 0.02
shader_parameter/texture_normal = SubResource("NoiseTexture2D_jsk3o")
shader_parameter/texture_normal2 = SubResource("NoiseTexture2D_4arys")
shader_parameter/wave_direction = Vector2(2, 0)
shader_parameter/wave_direction2 = Vector2(0, 1)
shader_parameter/time_scale = 0.025

[sub_resource type="BoxShape3D" id="BoxShape3D_a0tk4"]
size = Vector3(7.13336, 0.506226, 6.68487)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i0g27"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ealrb"]
noise_type = 3
fractal_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jsnrv"]
as_normal_map = true
noise = SubResource("FastNoiseLite_ealrb")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lggff"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s0gvp"]
as_normal_map = true
noise = SubResource("FastNoiseLite_lggff")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxd74"]
render_priority = 0
shader = ExtResource("4_tcnuu")
shader_parameter/c = Color(0, 0.592157, 0, 1)
shader_parameter/metallic = 0.0
shader_parameter/roughness = 0.938
shader_parameter/texture_normal = SubResource("NoiseTexture2D_jsnrv")
shader_parameter/texture_normal2 = SubResource("NoiseTexture2D_s0gvp")
shader_parameter/albedo_texture = SubResource("CompressedTexture2D_i0g27")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jka67"]
render_priority = 0
shader = ExtResource("3_jka67")
shader_parameter/c = Color(2.98411e-06, 0.981192, 0.21933, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wc5p8"]
render_priority = 0
shader = ExtResource("3_jka67")
shader_parameter/c = Color(0.04, 0.04, 0.04, 1)

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 2.53952, 5.93109, 6.41656)
fov = 30.0
size = 3.37
script = ExtResource("3_a0tk4")

[node name="Map" type="Node3D" parent="."]
script = ExtResource("2_i0g27")
heatmap = ExtResource("5_i0g27")

[node name="MapViews" type="Node3D" parent="Map"]

[node name="Nations" type="Sprite3D" parent="Map/MapViews"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.50582, 0.0260158, 2.41655)

[node name="Decoratives" type="Node3D" parent="Map"]

[node name="Terrain" type="Node3D" parent="Map/Decoratives"]

[node name="Mountain" type="Node3D" parent="Map/Decoratives/Terrain"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain"]
transform = Transform3D(0.0664757, 0, 0.249986, 0, 0.453764, 0, -0.0370546, 0, 0.448473, 1.90903, -0.135379, 1.89368)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain"]
transform = Transform3D(0.0711957, 0, -0.0405518, 0, 0.453764, 0, 0.00965768, 0, 0.298945, 2.04753, -0.139143, 2.27588)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="Mountain5" type="Node3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.779992, 0, 0.406849)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain5"]
transform = Transform3D(0.0405065, 0, 0.434675, 0, 0.453764, 0, -0.0644304, 0, 0.273274, 1.84724, -0.135379, 1.98945)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="Mountain2" type="Node3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54069, 0, -0.0876131)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain2"]
transform = Transform3D(-0.0219639, 0, 0.491594, 0, 0.453764, 0, -0.0728673, 0, -0.148178, 2.3367, -0.132073, 1.31512)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain2"]
transform = Transform3D(0.0432175, 0, -0.0363345, 0, 0.453764, 0, 0.00586244, 0, 0.267856, 2.05969, -0.127411, 1.47847)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="Mountain3" type="Node3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562364, 0, 0.296225)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain3"]
transform = Transform3D(0.0016983, 0, 0.317026, 0, 0.453764, 0, -0.041883, 0, 0.012855, 2.3367, -0.132073, 1.31512)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="Mountain6" type="Node3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.695292, 0, 2.7587)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain6"]
transform = Transform3D(-0.00839982, 0, 0.246191, 0, 0.453764, 0, -0.0428222, 0, -0.0482918, 2.35074, -0.130156, 1.31518)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="Mountain4" type="Node3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562364, 0, 1.17277)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Decoratives/Terrain/Mountain4"]
transform = Transform3D(0.0358125, 0, 0.164888, 0, 0.453764, 0, -0.0217838, 0, 0.271076, 1.95573, -0.132073, 1.44905)
mesh = SubResource("BoxMesh_jka67")
skeleton = NodePath("../..")

[node name="OmniLight3D" type="OmniLight3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.07398, 3.59691, -5.09573)
light_energy = 10.0
omni_range = 39.596
omni_attenuation = -0.171

[node name="WorldEnvironment" type="WorldEnvironment" parent="Map/Decoratives/Terrain"]
environment = SubResource("Environment_wc5p8")

[node name="Land" type="Sprite3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.506, 0.02, 2.417)
material_override = ExtResource("4_tuemg")
texture = ExtResource("5_i0g27")
script = ExtResource("5_3v7ru")
heatmap = ExtResource("5_i0g27")

[node name="LandProvince" type="Sprite3D" parent="Map/Decoratives/Terrain/Land"]
visible = false
texture = ExtResource("3_ealrb")

[node name="Water" type="MeshInstance3D" parent="Map/Decoratives/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.20999, 0.0153482, 1.50061)
mesh = SubResource("QuadMesh_i5arm")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("ShaderMaterial_jsk3o")

[node name="Area3D" type="Area3D" parent="Map"]

[node name="Sprite3D" type="Sprite3D" parent="Map/Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.50582, 0, 2.41655)
texture = ExtResource("5_i0g27")
script = ExtResource("2_noarx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51544, -0.246887, 2.13276)
shape = SubResource("BoxShape3D_a0tk4")

[node name="HighlightedProvince" type="Sprite3D" parent="Map"]
material_override = SubResource("ShaderMaterial_vxd74")

[node name="Highlight" type="Sprite3D" parent="Map/HighlightedProvince"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.50582, 0.022787, 2.41655)
material_override = SubResource("ShaderMaterial_jka67")

[node name="HighlightShadow" type="Sprite3D" parent="Map/HighlightedProvince/Highlight"]
transform = Transform3D(1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0)
material_override = SubResource("ShaderMaterial_wc5p8")

[node name="GameInstance" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0110288, -0.00527596, 0.00991535)
script = ExtResource("8_jsk3o")

[node name="Savefile" type="Node3D" parent="GameInstance"]
script = ExtResource("14_lggff")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 2.50582, -0.000583557, 2.41655)

[node name="Borders" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 2.506, 0.022, 2.417)
texture = ExtResource("3_i5arm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="UI/Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="UI/Control"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 0
offset_right = 158.0
offset_bottom = 95.0
texture_normal = ExtResource("9_4arys")
ignore_texture_size = true
stretch_mode = 0

[node name="Mana" type="Control" parent="UI/Control"]
anchors_preset = 0
offset_top = 105.0
offset_right = 157.0
offset_bottom = 353.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/Mana"]
layout_mode = 0
offset_right = 93.0
offset_bottom = 40.0

[node name="Science" type="Control" parent="UI/Control/Mana/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Science"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/Mana/VBoxContainer/Science"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -9.5
offset_right = 24.0
offset_bottom = 10.5
grow_vertical = 2
texture = ExtResource("10_6iypd")
stretch_mode = 2

[node name="Control" type="Control" parent="UI/Control/Mana/VBoxContainer/Science"]
anchors_preset = 0
offset_left = 31.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 24.0

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Science/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Science/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
text = "0"
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Science"]
layout_mode = 0
offset_left = 97.0
offset_right = 198.0
offset_bottom = 25.0
bbcode_enabled = true
text = "[color=black]+ [/color][color=green]0.1[/color]"

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Science/RichTextLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Culture" type="Control" parent="UI/Control/Mana/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Culture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/Mana/VBoxContainer/Culture"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -9.5
offset_right = 24.0
offset_bottom = 10.5
grow_vertical = 2
texture = ExtResource("11_wlxy5")
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Culture"]
layout_mode = 0
offset_left = 27.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 24.0
theme_override_font_sizes/normal_font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gold" type="Control" parent="UI/Control/Mana/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Gold"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/Mana/VBoxContainer/Gold"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -9.5
offset_right = 24.0
offset_bottom = 10.5
grow_vertical = 2
texture = ExtResource("12_3v7ru")
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Gold"]
layout_mode = 0
offset_left = 27.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 24.0
theme_override_font_sizes/normal_font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Happiness" type="Control" parent="UI/Control/Mana/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Happiness"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/Mana/VBoxContainer/Happiness"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -9.5
offset_right = 24.0
offset_bottom = 10.5
grow_vertical = 2
texture = ExtResource("13_tcnuu")
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Happiness"]
layout_mode = 0
offset_left = 27.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 24.0
theme_override_font_sizes/normal_font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Power" type="Control" parent="UI/Control/Mana/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/Control/Mana/VBoxContainer/Power"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/Mana/VBoxContainer/Power"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -9.5
offset_right = 24.0
offset_bottom = 10.5
grow_vertical = 2
texture = ExtResource("14_tuemg")
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Mana/VBoxContainer/Power"]
layout_mode = 0
offset_left = 27.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 24.0
theme_override_font_sizes/normal_font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Control" parent="UI/Control"]
anchors_preset = 0
offset_left = 1720.0
offset_right = 1917.0
offset_bottom = 49.0

[node name="Panel" type="Panel" parent="UI/Control/Time"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Time"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Day 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Province" type="Control" parent="UI/Control"]
anchors_preset = 0
offset_top = 778.0
offset_right = 836.0
offset_bottom = 1082.0

[node name="Panel" type="Panel" parent="UI/Control/Province"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/Province"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 62.0
grow_horizontal = 2
text = "PROVINCE NAME"
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="UI/Control/Province"]
layout_mode = 0
offset_left = 1.0
offset_top = 93.0
offset_right = 601.0
offset_bottom = 156.0
text = "ocean access: false"

[node name="RichTextLabel3" type="RichTextLabel" parent="UI/Control/Province"]
layout_mode = 0
offset_left = 1.0
offset_top = 150.0
offset_right = 601.0
offset_bottom = 213.0
text = "river access: false"
